chore (docs): Allow authorization in swagger ui
