# cmd/api/main.go
@@ -1,3 +1,6 @@
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
 package main
 
 import (
